Refactor charge density calculations and improve stability checks
- Updated `run_multint.py` to use absolute paths for figures and contours directories.
- Enhanced `ChargeDensityCalculator` to follow Fortran FJINT implementation for Fermi-Dirac integrals.
- Introduced direct calculation methods for bulk and surface charge densities in `MultIntSimulation`.
- Improved error handling and stability checks in charge density functions.
- Added properties in `SemiconductorRegion` for effective mass and suppression checks.
- Refined contour plotting logic to ensure valid levels and prevent duplicates.
- Enhanced visualization in `SEMITIPPlotter` to handle potential profile and band diagram plotting errors gracefully.

--- a/data/input/examples/example_multint.yaml
+++ b/data/input/examples/example_multint.yaml
@@ -9,7 +9,8 @@ tip:
   protrusion_radius: 0.0
   contact_potential: 0.0
   x_position: 0.0
-  y_position: 0.0  fermi_energy: 8.0
+  y_position: 0.0
+fermi_energy: 8.0
 electron_affinity: 4.07
 semiconductor_regions:
 - id: 1
